samples/_failures_safe/1761164038_492c81_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9d1f9995.c: In function ‘main’:
./samples/SAFE/__tmp_9d1f9995.c:157:17: error: expected declaration or statement at end of input
  157 |                 } else {
      |                 ^
./samples/SAFE/__tmp_9d1f9995.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d1f9995.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d1f9995.c:157:17: error: expected declaration or statement at end of input
